--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -220,3 +220,11 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+/* micropost jQuery countdown */
+
+.countdown {
+  display: inline;
+  padding-left: 10px;
+  color: $grayLight;
+}
