--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,9 +1,9 @@
 <% @user ||= current_user %>
 <div class="stats">
   <a href="<%= following_user_path(@user) %>">
-    <string id="following" class="stat">
+    <strong id="following" class="stat">
       <%= @user.followed_users.count %>
-    </string>
+    </strong>
     following
   </a>
   <a href="<%= followers_user_path(@user) %>">
