--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%provide(:title, @user.name) %>
+<% provide(:title, @user.name) %>
 <div class="row">
   <aside class="span4">
     <section>
@@ -12,7 +12,7 @@
     </section>
   </aside>
   <div class="span8">
-    <%= render 'shared/follow_form' if signed_in? %>
+    <%= render 'follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
